@@ -3,8 +3,9 @@ ganv (1.4.3) unstable;
   * Fix positioning of embedded widgets when changing layout.
   * Fix unexpected node jumping when dragging new connections.
   * Fix compilation with --no-fdgl (patch from Vlad Glagolev).
+  * Fix crash when destroying canvas.
 
- -- David Robillard <d@drobilla.net>  Fri, 07 Nov 2014 13:12:49 -0500
+ -- David Robillard <d@drobilla.net>  Thu, 05 Feb 2015 18:32:13 -0500
 
 ganv (1.4.2) stable;
 
